force-app/main/default/objects/iigproduct_2__ChatSession__c/iigproduct_2__ChatSession__c.object-meta.xml
<CustomObject>
    <label>ChatSession</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ChatSession Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>