force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/Assign_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Assign_Datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assign_Datetime</label>
    <type>DateTime</type>
</CustomField>