force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/Authentication__c.field-meta.xml
<CustomField>
    <fullName>Authentication__c</fullName>
    <formula>IF(iigproduct_2__Social_ID__r.iigproduct_2__Account__c != null, &apos;Pass&apos;, &apos;Fail&apos;)</formula>
    <label>Authentication</label>
    <type>Text</type>
</CustomField>