force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/Created_Date_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (Date)</label>
    <type>Date</type>
</CustomField>