force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <formula>MID(TEXT( CreatedDate + 7/24), 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (Time)</label>
    <type>Text</type>
</CustomField>