force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/First_Message_DateTime__c.field-meta.xml
<CustomField>
    <fullName>First_Message_DateTime__c</fullName>
    <description>for collect datetime stamp of customer message from FB,Line,OneApp</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Message DateTime</label>
    <type>DateTime</type>
</CustomField>