force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/First_Responded_Date_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Responded_Date_Date__c</fullName>
    <formula>DATEVALUE( iigproduct_2__First_Responded_DateTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Responded Date (Date)</label>
    <type>Date</type>
</CustomField>