force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__Auto_Number__c</fullName>
    <displayFormat>{YYYY}{MM}{DD}-{000000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>