force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__Chat_Note__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__Chat_Note__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chat Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>