force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__Chat_Session_External_ID__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__Chat_Session_External_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Chat Session External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>