force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__Duration__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__Duration__c</fullName>
    <formula>(iigproduct_2__End_DateTime__c-CreatedDate )*1440*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>duration in second</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>