force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__End_without_Survey__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__End_without_Survey__c</fullName>
    <description>If the agent click &apos;จบสนทนาและไม่ส่ง survey&apos;, End without Survey = 1.</description>
    <label>End without Survey</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>