force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__EndedBy__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__EndedBy__c</fullName>
    <description>- Agent : การสนทนาจบด้วย agent เป็นผู้กด end chat
- System : การสนทนาจบด้วยกรณีลูกค้าไม่ตอบและเกิด auto end chat (web snippet)
- Disconnected : การสนทนาจบด้วยกรณี agent ไม่สามารถส่งข้อความได้ (web snippet - socket close)</description>
    <label>EndedBy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>