force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__First_Responded_DateTime__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__First_Responded_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Responded DateTime</label>
    <type>DateTime</type>
</CustomField>