force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__IsExpired__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__IsExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExpired</label>
    <type>Checkbox</type>
</CustomField>