force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__Language__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__Language__c</fullName>
    <description>TH or EN</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Language</label>
    <length>2</length>
    <type>Text</type>
</CustomField>