force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__Line_Channel_Token__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__Line_Channel_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Line Channel Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>