force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__Social_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__Social_Display_Name__c</fullName>
    <formula>iigproduct_2__Social_ID__r.iigproduct_2__Display_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Social Display Name</label>
    <type>Text</type>
</CustomField>