force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__Status__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__Status__c</fullName>
    <description>&apos;- Missed : ไม่มีคนรับ chat , ลูกค้า abandon ออกไปเอง
- Complete : จบการสนทนา
- Inprogress : อยุ่ระหว่างการสนทนา
- Waiting : รอ agent รับ chat จาก Omni , รอ agent รับ chat ที่ถูก transfer มา</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Inprogress</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>