force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__Transfer_Message__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__Transfer_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transfer Message</label>
    <type>TextArea</type>
</CustomField>