force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__Transfer_Times__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__Transfer_Times__c</fullName>
    <label>Transfer Times</label>
    <summaryForeignKey>iigproduct_2__Chat_Transfer_Log__c.iigproduct_2__ChatSession__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>