force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/iigproduct_2__WebSession_ID__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__WebSession_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WebSession_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>