force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <description>create for report</description>
    <formula>IF (LEN(TEXT(MOD(VALUE(Left(right( trim(TEXT( CreatedDate ) ),9),2))+7,24)))&gt;1
,TEXT(MOD(VALUE(Left(right( trim(TEXT(CreatedDate) ),9),2))+7,24))&amp;&quot;:00&quot;
,&quot;0&quot;&amp;TEXT(MOD(VALUE(Left(right( trim(TEXT(CreatedDate) ),9),2))+7,24))&amp;&quot;:00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interval</label>
    <type>Text</type>
</CustomField>