force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/isTracking__c.field-meta.xml
<CustomField>
    <fullName>isTracking__c</fullName>
    <formula>IF(iigproduct_2__Tracking_Case__c != null, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isTracking</label>
    <type>Checkbox</type>
</CustomField>