force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/Over_60_Min__c.field-meta.xml
<CustomField>
    <fullName>Over_60_Min__c</fullName>
    <formula>IF( (WaitingTime_Sec__c &gt; 3600) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over 60 Min</label>
    <type>Checkbox</type>
</CustomField>