force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/SLA_No_Value__c.field-meta.xml
<CustomField>
    <fullName>SLA_No_Value__c</fullName>
    <formula>IF(AND(ISBLANK(First_Message_DateTime__c),!ISBLANK(iigproduct_2__Case__r.ClosedDate)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Message No Value</label>
    <type>Checkbox</type>
</CustomField>