force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <formula>IF(ISBLANK(iigproduct_2__Case__r.ClosedDate),&quot;&quot;,IF(Within_30_Min__c = True , &quot;Within SLA&quot;, &quot;Over SLA&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Status</label>
    <type>Text</type>
</CustomField>