force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/SLA_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Time__c</fullName>
    <formula>IF( ISBLANK($CustomMetadata.SLA_Config__mdt.Leave_chat.Time_Sec__c ),&quot;&quot;,TEXT($CustomMetadata.SLA_Config__mdt.Leave_chat.Time_Sec__c/60)&amp;&quot; min&quot;)</formula>
    <label>SLA Time</label>
    <type>Text</type>
</CustomField>