force-app/main/default/objects/iigproduct_2__ChatSession__c/fields/Within_SLA__c.field-meta.xml
<CustomField>
    <fullName>Within_SLA__c</fullName>
    <formula>IF(ISBLANK(iigproduct_2__Case__r.ClosedDate),&quot;&quot;,IF(Within_30_Min__c = True , &quot;In-time SLA&quot;, &quot;Over SLA&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Within SLA</label>
    <type>Text</type>
</CustomField>