force-app/main/default/objects/iigproduct_2__ChatSession__c/listViews/Bot_Call_ChatSession.listView-meta.xml
<ListView>
    <fullName>Bot_Call_ChatSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Bot Call Centre Chat Queue</label>
    <queue>Bot_Call</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>