force-app/main/default/objects/iigproduct_2__ChatSession__c/listViews/iigproduct_2__Chat_Line_ChatSession.listView-meta.xml
<ListView>
    <fullName>iigproduct_2__Chat_Line_ChatSession</fullName>
    <columns>NAME</columns>
    <columns>iigproduct_2__Case__c</columns>
    <columns>iigproduct_2__Connected_from__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>iigproduct_2__Subject__c</columns>
    <columns>iigproduct_2__Status__c</columns>
    <columns>iigproduct_2__EndedBy__c</columns>
    <columns>iigproduct_2__IsExpired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>iigproduct_2__Connected_from__c</field>
        <operation>equals</operation>
        <value>Line</value>
    </filters>
    <label>Chat - Line</label>
</ListView>